tests/NormalTests/paczka1/small_fuzzy/44671956.err
Error in line 4: zdqxGwqNd S137 60,5
Error in line 1: MzHx37lp A269 77,7
